show one project /id
